@@ -278,6 +278,8 @@ serve_document_root_file(struct request *request2,
         .other = HEADER_FORWARD_NO,
     };
 
+    tr->uri = NULL;
+
     request2->resource_tag = tr->address.u.local.path;
     request2->processor_focus = process &&
         strmap_get_checked(request2->args, "focus") != NULL;
